css/hero.css
.hero .hero-img,
.bottom-hero .hero-img {
  height: 400px;
  width: 100%;
}

.hero .hero-img {
  background: url(../img/hero-mobile.jpg) no-repeat center / cover;
}

.bottom-hero .hero-img {
  margin-top: 88px;
  background: url(../img/bottom-hero-mobile.jpg) no-repeat center / cover;
}

.hero p {
  padding: 88px 24px 0px;
  font-weight: var(--text-weight);
  font-size: 20px;
  text-align: center;
  line-height: 1.5;
}

@media (min-width: 768px) {
  .hero .hero-img {
    height: 620px;
    background: url(../img/hero-tablet.jpg) no-repeat center / cover;
  }

  .bottom-hero .hero-img {
    background: url(../img/bottom-hero-tablet.jpg) no-repeat center / cover;
  }

  .hero p {
    padding: 88px 60px;
    font-size: 32px;
  }
}

@media (min-width: 1024px) {
  .hero .hero-img {
    background: url(../img/hero-desktop.jpg) no-repeat center / cover;
  }

  .bottom-hero .hero-img {
    height: 600px;
    background: url(../img/bottom-hero-desktop.jpg) no-repeat center / cover;
  }

  .hero p {
    padding: 104px 120px;
  }
}

